--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ button.jqTransformButton {
 *:first-child+html button.jqTransformButton[type]{width: 1;} /* IE7 */
 
 button.jqTransformButton span {
-	background: transparent url(/images/jqtransform/btn_right.gif) no-repeat right top;
+	background: transparent url(../images/jqtransform/btn_right.gif) no-repeat right top;
 	display: block;
 	float: left;
 	padding: 0px 4px 0px 0px; /* sliding doors padding */
@@ -33,7 +33,7 @@ button.jqTransformButton span {
 }
 
 button.jqTransformButton span span {
-	background: transparent url(/images/jqtransform/btn_left.gif) no-repeat top left;
+	background: transparent url(../images/jqtransform/btn_left.gif) no-repeat top left;
 	color: #333;
 	padding: 8px 4px 0px 8px;
 	font-weight: normal;
@@ -64,14 +64,14 @@ button.jqTransformButton_click span { background-position: right -66px ; }
  * Inputs
  * ------------- */
 .jqTransformInputWrapper {
-	background: transparent url(/images/jqtransform/input/input_text_left.gif) no-repeat left top;
+	background: transparent url(../images/jqtransform/input/input_text_left.gif) no-repeat left top;
 	height: 31px;
 	padding: 0px;
 	float:left;
 }
 
 .jqTransformInputInner {
-	background: transparent url(/images/jqtransform/input/input_text_right.gif) no-repeat top right;
+	background: transparent url(../images/jqtransform/input/input_text_right.gif) no-repeat top right;
 	padding: 0px;
 	margin: 0px;
 }
@@ -160,24 +160,24 @@ table.jqTransformTextarea textarea{
 	border: 0;
 	background: none;
 }
-table.jqTransformTextarea td#jqTransformTextarea-tl{background: url(/images/jqtransform/textarea/textarea_tl.gif) no-repeat top left;}
-table.jqTransformTextarea td#jqTransformTextarea-tm{background: url(/images/jqtransform/textarea/textarea_tm.gif) repeat-x top left;}
-table.jqTransformTextarea td#jqTransformTextarea-tr{background: url(/images/jqtransform/textarea/textarea_tr.gif) no-repeat top left;}
+table.jqTransformTextarea td#jqTransformTextarea-tl{background: url(../images/jqtransform/textarea/textarea_tl.gif) no-repeat top left;}
+table.jqTransformTextarea td#jqTransformTextarea-tm{background: url(../images/jqtransform/textarea/textarea_tm.gif) repeat-x top left;}
+table.jqTransformTextarea td#jqTransformTextarea-tr{background: url(../images/jqtransform/textarea/textarea_tr.gif) no-repeat top left;}
 
-table.jqTransformTextarea td#jqTransformTextarea-ml{background: url(/images/jqtransform/textarea/textarea_ml.gif) repeat-y top left;}
-table.jqTransformTextarea td#jqTransformTextarea-mm{background: url(/images/jqtransform/textarea/textarea-mm.gif) repeat;}
-table.jqTransformTextarea td#jqTransformTextarea-mr{background: url(/images/jqtransform/textarea/textarea_mr.gif) repeat-y top left;}
+table.jqTransformTextarea td#jqTransformTextarea-ml{background: url(../images/jqtransform/textarea/textarea_ml.gif) repeat-y top left;}
+table.jqTransformTextarea td#jqTransformTextarea-mm{background: url(../images/jqtransform/textarea/textarea-mm.gif) repeat;}
+table.jqTransformTextarea td#jqTransformTextarea-mr{background: url(../images/jqtransform/textarea/textarea_mr.gif) repeat-y top left;}
 
-table.jqTransformTextarea td#jqTransformTextarea-bl{background: url(/images/jqtransform/textarea/textarea_bl.gif) no-repeat top left;}
-table.jqTransformTextarea td#jqTransformTextarea-bm{background: url(/images/jqtransform/textarea/textarea_bm.gif) repeat-x top left;}
-table.jqTransformTextarea td#jqTransformTextarea-br{background: url(/images/jqtransform/textarea/textarea_br.gif) no-repeat top left;}
+table.jqTransformTextarea td#jqTransformTextarea-bl{background: url(../images/jqtransform/textarea/textarea_bl.gif) no-repeat top left;}
+table.jqTransformTextarea td#jqTransformTextarea-bm{background: url(../images/jqtransform/textarea/textarea_bm.gif) repeat-x top left;}
+table.jqTransformTextarea td#jqTransformTextarea-br{background: url(../images/jqtransform/textarea/textarea_br.gif) no-repeat top left;}
 
 /*hover*/
 table.jqTransformTextarea-hover td#jqTransformTextarea-tl{background-position:0px -5px;}
 table.jqTransformTextarea-hover td#jqTransformTextarea-tm{background-position:0px -5px;}
 table.jqTransformTextarea-hover td#jqTransformTextarea-tr{background-position:0px -5px;}
 table.jqTransformTextarea-hover td#jqTransformTextarea-ml{background-position:-5px 0px;}
-table.jqTransformTextarea-hover td#jqTransformTextarea-mm{background-image: url(/images/jqtransform/textarea/textarea-mm-hover.gif);}
+table.jqTransformTextarea-hover td#jqTransformTextarea-mm{background-image: url(../images/jqtransform/textarea/textarea-mm-hover.gif);}
 table.jqTransformTextarea-hover td#jqTransformTextarea-mr{background-position:-5px 0px;}
 table.jqTransformTextarea-hover td#jqTransformTextarea-bl{background-position:0px -5px;}
 table.jqTransformTextarea-hover td#jqTransformTextarea-bm{background-position:0px -5px;}
@@ -188,7 +188,7 @@ table.jqTransformTextarea-focus td#jqTransformTextarea-tl{background-position:0p
 table.jqTransformTextarea-focus td#jqTransformTextarea-tm{background-position:0px -10px;}
 table.jqTransformTextarea-focus td#jqTransformTextarea-tr{background-position:0px -10px;}
 table.jqTransformTextarea-focus td#jqTransformTextarea-ml{background-position:-10px 0px;}
-table.jqTransformTextarea-focus td#jqTransformTextarea-mm{background-image: url(/images/jqtransform/textarea/textarea-mm-focus.gif);}
+table.jqTransformTextarea-focus td#jqTransformTextarea-mm{background-image: url(../images/jqtransform/textarea/textarea-mm-focus.gif);}
 table.jqTransformTextarea-focus td#jqTransformTextarea-mr{background-position: -10px 0px;}
 table.jqTransformTextarea-focus td#jqTransformTextarea-bl{background-position:0px -10px;}
 table.jqTransformTextarea-focus td#jqTransformTextarea-bm{background-position:0px -10px;}
@@ -215,7 +215,7 @@ table.jqTransformTextarea .jqTransformSafariTextarea textarea{
  * ------------- */
 .jqTransformRadioWrapper {float: left;display:block;margin:0px 4px;	margin-top:5px;}
 .jqTransformRadio {
-	background: transparent url(/images/jqtransform/radio.gif) no-repeat center top;
+	background: transparent url(../images/jqtransform/radio.gif) no-repeat center top;
 	vertical-align: middle;
 	height: 19px;
 	width: 18px;
@@ -231,7 +231,7 @@ span.jqTransformCheckboxWrapper{
 	margin-top:5px;
 }
 a.jqTransformCheckbox {
-	background: transparent url(/images/jqtransform/checkbox.gif) no-repeat center top;
+	background: transparent url(../images/jqtransform/checkbox.gif) no-repeat center top;
 	vertical-align: middle;
 	height: 19px;
 	width: 18px;
@@ -251,7 +251,7 @@ a.jqTransformChecked { background-position: center bottom;}
 	width: 45px;
 	position:relative;
 	height: 31px;
-	background: url(/images/jqtransform/select_left.gif) no-repeat top left;
+	background: url(../images/jqtransform/select_left.gif) no-repeat top left;
 	float:left;
 }
 
@@ -276,7 +276,7 @@ a.jqTransformChecked { background-position: center bottom;}
 	right: 0px;
 	width: 31px;
 	height: 31px;
-	background: url(/images/jqtransform/select_right.gif) no-repeat center center;
+	background: url(../images/jqtransform/select_right.gif) no-repeat center center;
 }
 
 .jqTransformSelectWrapper ul {
